<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.auth.SignUpActivity">

    <ScrollView
        android:id="@+id/sign_up_form"
        android:layout_width="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="?attr/actionBarSize"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="Your online trainer and fitness advisior!"
                android:textSize="17dp"
                android:textStyle="bold"
                android:textColor="@color/dark_gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/gray_shadow_white_back"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="40dp"
                    android:src="@mipmap/email"/>

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingLeft="10dp"
                    android:text=""
                    android:textSize="15dp"
                    android:imeOptions="actionNext"
                    android:background="@color/transparent"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/gray_shadow_white_back"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@mipmap/password"/>

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/prompt_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:text=""
                    android:textSize="15dp"
                    android:paddingLeft="10dp"
                    android:drawablePadding="5dip"
                    android:background="@color/transparent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/gray_shadow_white_back"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="3dp"
                    android:src="@mipmap/full_name"/>

                <AutoCompleteTextView
                    android:id="@+id/full_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dp"
                    android:hint="@string/prompt_full_name"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:text=""
                    android:textSize="15dp"
                    android:paddingLeft="10dp"
                    android:background="@color/transparent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/gray_shadow_white_back"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@mipmap/mobile_no"/>

                <AutoCompleteTextView
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:hint="@string/prompt_number"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:paddingLeft="10dp"
                    android:text=""
                    android:textSize="15dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/gray_shadow_white_back"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@mipmap/medical_details"/>

                <AutoCompleteTextView
                    android:id="@+id/medical_details"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/prompt_medial_details"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:imeOptions="actionNext"
                    android:text=""
                    android:textSize="15dp"
                    android:paddingLeft="10dp"
                    android:background="@color/transparent" />
            </LinearLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:clickable="true"
                android:onClick="onClick"
                android:gravity="center"
                android:background="@drawable/shadow_red"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sign_in"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textColor="@color/colorPrimary"
                android:gravity="center_horizontal"
                android:clickable="true"
                android:onClick="onClick"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

    <!-- Loading progress -->
    <include
        layout="@layout/view_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</RelativeLayout>
