<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jq.app.ui.payment.PaymentFragment">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/dark_gray"
                android:text="@string/title_payment_details" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/gray_shadow_white_back"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:src="@mipmap/username" />

                <AutoCompleteTextView
                    android:id="@+id/txtNameOnCard"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:hint="@string/prompt_name_on_card"
                    android:inputType="textEmailAddress"
                    android:nextFocusDown="@+id/txtCardNumber"
                    android:nextFocusForward="@+id/txtCardNumber"
                    android:maxLines="1"
                    android:paddingLeft="10dp"
                    android:text=""
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/gray_shadow_white_back"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:src="@mipmap/card_number" />

                <AutoCompleteTextView
                    android:id="@+id/txtCardNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:hint="@string/prompt_card_number"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingLeft="10dp"
                    android:nextFocusUp="@+id/txtNameOnCard"
                    android:nextFocusDown="@+id/txtExpiredDate"
                    android:nextFocusForward="@+id/txtExpiredDate"
                    android:text=""
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="60dp"
                    android:layout_weight="3"
                    android:background="@drawable/gray_shadow_white_back"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_vertical"
                        android:src="@mipmap/expiry_date" />

                    <AutoCompleteTextView
                        android:id="@+id/txtExpiredDate"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:hint="@string/prompt_expired_date"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:nextFocusUp="@+id/txtCardNumber"
                        android:nextFocusRight="@+id/txtCvv"
                        android:nextFocusForward="@+id/txtCvv"
                        android:paddingLeft="10dp"
                        android:text=""
                        android:textSize="15dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="60dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="2"
                    android:background="@drawable/gray_shadow_white_back"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_vertical"
                        android:src="@mipmap/cvv" />

                    <AutoCompleteTextView
                        android:id="@+id/txtCvv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:hint="@string/prompt_cvv"
                        android:inputType="textEmailAddress"
                        android:nextFocusLeft="@+id/txtExpiredDate"
                        android:nextFocusDown="@+id/txtStreet"
                        android:nextFocusForward="@+id/txtStreet"
                        android:maxLines="1"
                        android:paddingLeft="10dp"
                        android:text=""
                        android:textSize="15dp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/gray_shadow_white_back"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:src="@mipmap/street" />

                <AutoCompleteTextView
                    android:id="@+id/txtStreet"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:hint="@string/prompt_street"
                    android:inputType="textEmailAddress"
                    android:nextFocusUp="@+id/txtCvv"
                    android:nextFocusDown="@+id/txtCity"
                    android:nextFocusForward="@+id/txtCity"
                    android:maxLines="1"
                    android:paddingLeft="10dp"
                    android:text=""
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@drawable/gray_shadow_white_back"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_vertical"
                        android:src="@mipmap/city" />

                    <AutoCompleteTextView
                        android:id="@+id/txtCity"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:hint="@string/prompt_city"
                        android:inputType="textEmailAddress"
                        android:nextFocusUp="@+id/txtStreet"
                        android:nextFocusRight="@+id/txtState"
                        android:nextFocusForward="@+id/txtState"
                        android:maxLines="1"
                        android:paddingLeft="10dp"
                        android:text=""
                        android:textSize="15dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/gray_shadow_white_back"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_vertical"
                        android:src="@mipmap/state" />

                    <AutoCompleteTextView
                        android:id="@+id/txtState"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:hint="@string/prompt_state"
                        android:inputType="textEmailAddress"
                        android:nextFocusLeft="@+id/txtCity"
                        android:nextFocusDown="@+id/txtZipCode"
                        android:nextFocusForward="@+id/txtZipCode"
                        android:maxLines="1"
                        android:paddingLeft="10dp"
                        android:text=""
                        android:textSize="15dp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/gray_shadow_white_back"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:src="@mipmap/zip_code" />

                <AutoCompleteTextView
                    android:id="@+id/txtZipCode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:hint="@string/prompt_zip_code"
                    android:inputType="textEmailAddress"
                    android:nextFocusUp="@+id/txtState"
                    android:maxLines="1"
                    android:paddingLeft="10dp"
                    android:text=""
                    android:textSize="15dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
